feat: slug campaigns
